fix text align

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   font-family: Arial;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
 }
 
 .container {
